--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "using-typescript",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-helmet": "^5.2.0"
-  },
-  "keywords": [
-    "gatsby"
-  ],
+  "description": "Gatsby example site demonstrating how to use Typescript with Gatsby",
+  "author": "fabien0102 <fabien0102@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "start": "gatsby develop",
     "develop": "gatsby develop",
-    "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gatsby build",
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --project ."
+  },
+  "dependencies": {
+    "@types/node": "^10.3.1",
+    "@types/react": "16.3.16",
+    "@types/react-dom": "16.0.6",
+    "gatsby": "next",
+    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-typescript": "next",
+    "gatsby-source-contentful": "^1.3.54",
+    "graphql-typescript": "^0.3.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "typescript": "^3.0.1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-react": "^3.6.0"
   }
 }
