--- a/package.json
+++ b/package.json
@@ -16,17 +16,16 @@
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
     "gatsby": "next",
-    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-sass": "next",
     "gatsby-plugin-typescript": "next",
-    "gatsby-source-contentful": "^1.3.54",
-    "graphql-typescript": "^0.3.0",
+    "node-sass": "^4.9.3",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "typescript": "^3.0.1"
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.9.1"
   }
 }
