--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/node": "^10.3.1",
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
+    "dotenv": "^6.0.0",
     "gatsby": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-typescript": "next",
+    "gatsby-source-contentful": "^1.3.54",
+    "graphql-typescript": "^0.3.0",
     "node-sass": "^4.9.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
