--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/node": "^10.3.1",
+    "@types/query-string": "^6.1.0",
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
     "dotenv": "^6.0.0",
@@ -22,6 +23,7 @@
     "gatsby-source-contentful": "^1.3.54",
     "graphql-typescript": "^0.3.0",
     "node-sass": "^4.9.3",
+    "query-string": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
