--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-typescript": "next",
     "gatsby-source-contentful": "^1.3.54",
+    "gatsby-transformer-remark": "^1.7.44",
     "graphql-typescript": "^0.3.0",
     "node-sass": "^4.9.3",
     "query-string": "^6.1.0",
