--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/query-string": "^6.1.0",
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
+    "@types/react-router": "^4.0.30",
+    "@types/react-router-dom": "^4.3.0",
+    "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "gatsby": "next",
     "gatsby-plugin-sass": "next",
@@ -24,6 +27,7 @@
     "gatsby-transformer-remark": "^1.7.44",
     "graphql-typescript": "^0.3.0",
     "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
