--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "16.0.6",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
+    "bootstrap-4-grid": "^2.4.1",
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "gatsby": "next",
