--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
