--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "The Trevor Harmon",
+  "name": "the-trevor-harmon",
   "version": "1.0.0",
   "description": "The portfolio and personal site of Trevor Harmon",
   "author": "fabien0102 <fabien0102@gmail.com>",
