--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "bootstrap-4-grid": "^2.4.1",
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
-    "gatsby": "next",
-    "gatsby-plugin-sass": "next",
-    "gatsby-plugin-typescript": "next",
+    "gatsby": "^2.0.35",
+    "gatsby-plugin-sass": "^2.0.0-rc.2",
+    "gatsby-plugin-typescript": "^2.0.0-rc.6",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-remark": "^1.7.44",
     "graphql-typescript": "^0.3.0",
