--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "gatsby-plugin-typescript": "^2.0.0-rc.6",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-transformer-remark": "^1.7.44",
-    "graphql-typescript": "^0.3.0",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
@@ -35,9 +34,11 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "webpack": "^4.23.1"
   }
 }
