Fixing lint errors

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@types/node": "^10.3.1",
