--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "gatsby": "^2.0.35",
-    "gatsby-plugin-sass": "^2.0.0-rc.2",
-    "gatsby-plugin-typescript": "^2.0.0-rc.6",
-    "gatsby-source-contentful": "^1.3.54",
-    "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-plugin-sass": "^2.0.3",
+    "gatsby-plugin-typescript": "^2.0.1",
+    "gatsby-source-contentful": "^2.0.12",
+    "gatsby-transformer-remark": "^2.1.11",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
