--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
+    "start-broadcast": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "type-check": "tsc --noEmit"
   },
