--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sass": "^2.0.3",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-source-contentful": "^2.0.12",
+    "gatsby-source-medium": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.11",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
