--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "gatsby": "^2.0.35",
+    "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-sass": "^2.0.3",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-source-contentful": "^2.0.12",
