--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "fbjs": "^1.0.0",
     "gatsby-plugin-tslint": "^0.0.1",
+    "object-assign": "^4.1.1",
     "prop-types": "^15.6.2",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
