--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "gatsby": "^2.0.35",
+    "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-sass": "^2.0.3",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-source-contentful": "^2.0.12",
@@ -39,7 +40,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "fbjs": "^1.0.0",
     "gatsby-plugin-tslint": "^0.0.1",
+    "object-assign": "^4.1.1",
     "prop-types": "^15.6.2",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
