--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "gatsby": "^2.0.35",
+    "gatsby-image": "^2.0.22",
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-sass": "^2.0.3",
+    "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-source-contentful": "^2.0.12",
     "gatsby-source-medium": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.11",
+    "gatsby-transformer-sharp": "^2.1.9",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
