Added google analytics

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 CONTENTFUL_SPACE_ID=Your space id here
 CONTENTFUL_ACCESS_TOKEN=Your access token here
+GOOGLE_ANALYTICS_TRACKING_ID=Your access id here
