--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby": "^2.0.35",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-favicon": "^3.1.4",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-sass": "^2.0.3",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-typescript": "^2.0.1",
