--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 CONTENTFUL_SPACE_ID=Your space id here
-CONTENTFUL_ACCESS_TOKEN=Your access token here
+CONTENTFUL_DELIVERY_ACCESS_TOKEN=Your delivery access token here
+CONTENTFUL_PREVIEW_ACCESS_TOKEN=Your preview access token here
+
 GOOGLE_ANALYTICS_TRACKING_ID=Your access id here
