improved the way I'm managing production/environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,4 @@
-CONTENTFUL_SPACE_ID=Your space id here
-CONTENTFUL_DELIVERY_ACCESS_TOKEN=Your delivery access token here
-CONTENTFUL_PREVIEW_ACCESS_TOKEN=Your preview access token here
+CONTENTFUL_ACCESS_TOKEN=token goes here
+CONTENTFUL_SPACE_ID=id goes here
 
-GOOGLE_ANALYTICS_TRACKING_ID=Your access id here
+GOOGLE_ANALYTICS_TRACKING_ID=id goes here
