Analytics, Content Preview (#9)
* Added google analytics

* Added support for the contentful preview API when using deveopment

* removed old unnecessary files

* improved the way I'm managing production/environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
-CONTENTFUL_SPACE_ID=Your space id here
-CONTENTFUL_ACCESS_TOKEN=Your access token here
+CONTENTFUL_ACCESS_TOKEN=token goes here
+CONTENTFUL_SPACE_ID=id goes here
+
+GOOGLE_ANALYTICS_TRACKING_ID=id goes here
