--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-sass": "^2.0.3",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-typescript": "^2.0.1",
     "gatsby-source-contentful": "^2.0.12",
     "gatsby-source-medium": "^2.0.1",
