--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/classnames": "^2.2.6",
     "@types/node": "^10.3.1",
     "@types/query-string": "^6.1.0",
-    "@types/react": "16.3.16",
+    "@types/react": "^16.7.13",
     "@types/react-dom": "16.0.6",
     "@types/react-helmet": "^5.0.7",
     "@types/react-router": "^4.0.30",
@@ -38,8 +38,8 @@
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-helmet": "^5.2.0",
     "react-masonry-css": "^1.0.11"
   },
