--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-typescript": "^2.0.1",
+    "gatsby-remark-embed-gist": "^1.1.4",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-contentful": "^2.0.12",
     "gatsby-source-medium": "^2.0.1",
