--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-4-grid": "^2.4.1",
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
+    "eslint-plugin-graphql": "^3.0.1",
     "gatsby": "^2.0.35",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-favicon": "^3.1.4",
