--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-typescript": "^2.0.1",
+    "gatsby-remark-embed-gist": "^1.1.4",
+    "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-contentful": "^2.0.12",
     "gatsby-source-medium": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.9",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
+    "prismjs": "^1.15.0",
     "query-string": "^6.1.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
