--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby": "^2.0.35",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-favicon": "^3.1.4",
+    "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-feed-generator": "^1.0.8",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-sass": "^2.0.3",
