--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sass": "^2.0.3",
     "gatsby-plugin-sharp": "^2.0.14",
@@ -44,6 +45,7 @@
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "prismjs": "^1.15.0",
+    "prop-types": "^15.7.1",
     "query-string": "^6.1.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
@@ -55,7 +57,6 @@
     "fbjs": "^1.0.0",
     "gatsby-plugin-tslint": "^0.0.1",
     "object-assign": "^4.1.1",
-    "prop-types": "^15.6.2",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
     "tslint-react": "^3.6.0",
