--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-google-analytics": "^2.0.8",
+    "gatsby-plugin-mailchimp": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
