--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ CONTENTFUL_ACCESS_TOKEN=token goes here
 CONTENTFUL_SPACE_ID=id goes here
 
 GOOGLE_ANALYTICS_TRACKING_ID=id goes here
+MAILCHIMP_ACTION_URL=url goes here
