--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "gatsby develop",
     "start-broadcast": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --config tslint.json --project tsconfig.json"
   },
   "dependencies": {
     "@types/classnames": "^2.2.6",
