--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "gatsby develop",
     "start-broadcast": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --config tslint.json --project tsconfig.json",
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "@types/classnames": "^2.2.6",
@@ -29,6 +31,7 @@
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-google-analytics": "^2.0.8",
+    "gatsby-plugin-mailchimp": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-react-svg": "^2.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
