--- a/package.json
+++ b/package.json
@@ -14,56 +14,56 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@types/classnames": "^2.2.6",
-    "@types/node": "^10.3.1",
-    "@types/query-string": "^6.1.0",
-    "@types/react": "^16.7.13",
-    "@types/react-dom": "16.0.6",
-    "@types/react-helmet": "^5.0.7",
-    "@types/react-router": "^4.0.30",
-    "@types/react-router-dom": "^4.3.0",
-    "bootstrap-4-grid": "^2.4.1",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^12.6.8",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "16.8.4",
+    "@types/react-helmet": "^5.0.8",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.4",
+    "bootstrap-4-grid": "^3.0.0",
     "classnames": "^2.2.6",
-    "dotenv": "^6.0.0",
-    "eslint-plugin-graphql": "^3.0.1",
-    "gatsby": "^2.0.35",
-    "gatsby-image": "^2.0.22",
-    "gatsby-plugin-favicon": "^3.1.4",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.8",
-    "gatsby-plugin-mailchimp": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sass": "^2.0.3",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-sitemap": "^2.0.3",
-    "gatsby-plugin-typescript": "^2.0.1",
-    "gatsby-remark-embed-gist": "^1.1.4",
-    "gatsby-remark-images-contentful": "^2.0.8",
-    "gatsby-remark-prismjs": "^3.2.0",
-    "gatsby-source-contentful": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.11",
-    "gatsby-transformer-sharp": "^2.1.9",
-    "node-sass": "^4.9.3",
-    "normalize.css": "^8.0.0",
-    "prismjs": "^1.15.0",
-    "prop-types": "^15.7.1",
-    "query-string": "^6.1.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
-    "react-helmet": "^5.2.0",
-    "react-masonry-css": "^1.0.11"
+    "dotenv": "^8.0.0",
+    "eslint-plugin-graphql": "^3.0.3",
+    "gatsby": "^2.13.28",
+    "gatsby-image": "^2.2.6",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-feed": "^2.3.4",
+    "gatsby-plugin-google-analytics": "^2.1.4",
+    "gatsby-plugin-mailchimp": "^5.1.2",
+    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-react-svg": "^2.1.1",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sass": "^2.1.3",
+    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-plugin-sitemap": "^2.2.3",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-remark-embed-gist": "^1.1.8",
+    "gatsby-remark-images-contentful": "^2.1.4",
+    "gatsby-remark-prismjs": "^3.3.3",
+    "gatsby-source-contentful": "^2.1.14",
+    "gatsby-transformer-remark": "^2.6.6",
+    "gatsby-transformer-sharp": "^2.2.4",
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
+    "prismjs": "^1.16.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.8.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-masonry-css": "^1.0.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.5.5",
     "fbjs": "^1.0.0",
-    "gatsby-plugin-tslint": "^0.0.1",
+    "gatsby-plugin-tslint": "^0.0.2",
     "object-assign": "^4.1.1",
-    "tslint": "^5.11.0",
+    "tslint": "^5.18.0",
     "tslint-loader": "^3.5.4",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.1.3",
-    "webpack": "^4.23.1"
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.36.1"
   }
 }
