updated sample .env

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,10 @@
 SASS_PATH=src/styles/
+NODE_PATH=./
 
 CONTENTFUL_ACCESS_TOKEN=token goes here
 CONTENTFUL_SPACE_ID=id goes here
 
-GOOGLE_ANALYTICS_TRACKING_ID=id goes here
-
 MAILCHIMP_ACTION_URL=url goes here
 MAILCHIMP_FORM_FALLBACK_URL=url goes here
+
+GOOGLE_ANALYTICS_TRACKING_ID=id goes here
