--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "gatsby build",
     "type-check": "tsc --noEmit",
     "lint": "tslint --config tslint.json --project tsconfig.json",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\""
   },
   "dependencies": {
     "@types/classnames": "^2.2.9",
@@ -47,6 +48,7 @@
     "gatsby-transformer-sharp": "^2.2.4",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
+    "prettier": "^1.18.2",
     "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.1",
