--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\""
   },
   "dependencies": {
+    "@fontsource/inter": "^4.5.15",
     "@types/react-is": "^17.0.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "gatsby": "^5.3.3",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^5.8.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-mailchimp": "^5.2.2",
