--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "@mdx-js/react": "^2.3.0",
     "@types/react-is": "^17.0.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
@@ -26,16 +27,19 @@
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-mdx": "^5.8.0",
+    "gatsby-plugin-page-creator": "^5.8.0",
     "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sass": "^6.3.1",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-remark-images": "^7.8.0",
     "gatsby-remark-images-contentful": "^6.3.0",
     "gatsby-remark-prismjs": "^7.8.0",
     "gatsby-source-contentful": "^8.3.1",
-    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-source-filesystem": "^5.8.0",
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
     "gatsby-transformer-sqip": "^5.3.2",
@@ -46,6 +50,7 @@
     "react-helmet": "^6.1.0",
     "react-is": "^18.2.0",
     "react-masonry-css": "^1.0.16",
+    "reading-time": "^1.5.0",
     "sass": "^1.57.1",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
