Silence Babel warnings

--- a/.babelrc
+++ b/.babelrc
@@ -27,6 +27,15 @@
         "languages": ["javascript", "css", "markup", "g4"],
         "plugins": ["line-numbers"],
         "theme": "okaidia"
+    }],
+    ["@babel/plugin-proposal-private-property-in-object", {
+      "loose": true 
+    }],
+    ["@babel/plugin-proposal-class-properties", {
+      "loose": true 
+    }],
+    ["@babel/plugin-proposal-private-methods", {
+      "loose": true
     }]
   ]
 }
