--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\""
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@codemirror/language": "^6.6.0",
     "@codemirror/view": "^6.9.3",
     "@fontsource/fira-mono": "^4.5.10",
