--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@codemirror/language": "^6.6.0",
     "@codemirror/view": "^6.9.3",
+    "@fontsource/crimson-text": "^4.5.5",
     "@fontsource/fira-mono": "^4.5.10",
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/source-serif-pro": "^4.5.9",
     "@lezer/common": "^1.0.2",
     "@lezer/highlight": "^1.1.4",
     "@mdx-js/react": "^2.3.0",
@@ -35,6 +37,7 @@
     "dotenv": "^16.0.3",
     "gatsby": "^5.3.3",
     "gatsby-image": "^3.11.0",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-feed": "^5.8.0",
     "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-image": "^3.3.2",
