Completed draft of third post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
   "files.associations": {
     "*.scss": "postcss"
+  },
+  "[mdx]": {
+    "diffEditor.wordWrap": "on",
+    "editor.wordWrap": "on"
+  },
+  "[markdown]": {
+    "diffEditor.wordWrap": "on",
+    "editor.wordWrap": "on"
   }
 }
