--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-sitemap": "^6.3.1",
     "gatsby-remark-copy-linked-files": "^6.8.0",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^7.8.0",
     "gatsby-remark-prismjs": "^7.8.0",
     "gatsby-source-filesystem": "^5.8.0",
