Added YoungSerif font

--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@codemirror/language": "^6.6.0",
     "@codemirror/view": "^6.9.3",
+    "@fontsource/alice": "^4.5.10",
+    "@fontsource/azeret-mono": "^4.5.12",
     "@fontsource/calistoga": "^4.5.11",
     "@fontsource/crimson-text": "^4.5.5",
     "@fontsource/dm-serif-display": "^4.5.10",
     "@fontsource/fira-mono": "^4.5.10",
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/lexend": "^4.5.15",
+    "@fontsource/lustria": "^4.5.11",
     "@fontsource/playfair-display": "^4.5.13",
     "@fontsource/shrikhand": "^4.5.9",
     "@fontsource/source-serif-pro": "^4.5.9",
+    "@fontsource/syne": "^4.5.13",
     "@fontsource/unbounded": "^4.5.1",
     "@fontsource/yeseva-one": "^4.5.10",
     "@lezer/common": "^1.0.2",
