--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fontsource/inter": "^4.5.15",
     "@fontsource/lexend": "^4.5.15",
     "@fontsource/lustria": "^4.5.11",
+    "@fontsource/montagu-slab": "^4.5.12",
     "@fontsource/playfair-display": "^4.5.13",
     "@fontsource/shrikhand": "^4.5.9",
     "@fontsource/source-serif-pro": "^4.5.9",
