Lots of little improvements

--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@fontsource/dm-serif-display": "^4.5.10",
     "@fontsource/fira-mono": "^4.5.10",
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/jetbrains-mono": "^4.5.12",
     "@fontsource/lexend": "^4.5.15",
     "@fontsource/lustria": "^4.5.11",
     "@fontsource/montagu-slab": "^4.5.12",
     "@fontsource/playfair-display": "^4.5.13",
+    "@fontsource/pt-mono": "^4.5.11",
     "@fontsource/shrikhand": "^4.5.9",
     "@fontsource/source-serif-pro": "^4.5.9",
+    "@fontsource/space-mono": "^4.5.12",
     "@fontsource/syne": "^4.5.13",
     "@fontsource/unbounded": "^4.5.1",
     "@fontsource/yeseva-one": "^4.5.10",
