--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@codemirror/language": "^6.6.0",
     "@codemirror/view": "^6.9.3",
-    "@fontsource/fira-mono": "^4.5.10",
-    "@fontsource/inter": "^4.5.15",
+    "@fontsource/jetbrains-mono": "^4.5.12",
+    "@fontsource/montagu-slab": "^4.5.12",
+    "@fontsource/source-serif-pro": "^4.5.9",
     "@lezer/common": "^1.0.2",
     "@lezer/highlight": "^1.1.4",
     "@mdx-js/react": "^2.3.0",
