--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
-    "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\""
+    "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\"",
+    "create-blog-post": "node ./scripts/create-blog-post.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -74,8 +75,12 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.14",
+    "commander": "^10.0.1",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
+    "slugify": "^1.6.6",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3"
   }
