--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
+    "eslint-config-react-app": "^7.0.1",
     "gatsby": "^5.3.3",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^5.8.0",
