--- a/package.json
+++ b/package.json
@@ -67,15 +67,18 @@
     "react-masonry-css": "^1.0.16",
     "reading-time": "^1.5.0",
     "sass": "^1.57.1",
+    "unist-util-visit": "^4.1.2",
     "util": "^0.12.5",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.1.0",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.14",
+    "child_process": "^1.0.2",
     "commander": "^10.0.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
@@ -83,6 +86,7 @@
     "prettier": "^2.8.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "uuid": "^9.0.0"
   }
 }
