--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@babel/preset-env": "^7.21.4",
     "@codemirror/language": "^6.6.0",
     "@codemirror/view": "^6.9.3",
     "@fontsource/jetbrains-mono": "^4.5.12",
@@ -32,6 +33,7 @@
     "antlr4ts": "^0.5.0-alpha.4",
     "assert": "^2.0.0",
     "babel-plugin-prismjs": "^2.1.0",
+    "babel-preset-gatsby": "^3.9.0",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
