--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@babel/preset-env": "^7.21.4",
+    "@codemirror/lang-javascript": "^6.1.7",
     "@codemirror/language": "^6.6.0",
+    "@codemirror/lint": "^6.2.1",
+    "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.9.3",
     "@fontsource/jetbrains-mono": "^4.5.12",
     "@fontsource/montagu-slab": "^4.5.12",
