🔧 Add netlify support for puppeteer

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
 .cache/*
 public/*
 src/content/blog/2019/three-simple-ways-to-write-cleaner-code/three-simple-ways-to-write-cleaner-code.md
+netlify.toml
