--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-mdx": "^5.8.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-page-creator": "^5.8.0",
     "gatsby-plugin-react-helmet": "^6.3.0",
     "gatsby-plugin-react-svg": "^3.3.0",
@@ -68,7 +69,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-is": "^18.2.0",
     "react-masonry-css": "^1.0.16",
     "reading-time": "^1.5.0",
     "sass": "^1.57.1",
@@ -83,15 +83,11 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.14",
-    "child_process": "^1.0.2",
-    "commander": "^10.0.1",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
+    "netlify-plugin-cache": "^1.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.3",
-    "uuid": "^9.0.0"
+    "typescript": "^4.9.3"
   }
 }
