--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "unifiedjs.vscode-mdx",
         "graphql.vscode-graphql-syntax",
         "compulim.compulim-vscode-closetag",
-        "be5invis.toml"
+        "be5invis.toml",
+        "bpruitt-goddard.mermaid-markdown-syntax-highlighting"
     ]
 }
