--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
     "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\"",
-    "create-blog-post": "node ./scripts/create-blog-post.js"
+    "create-blog-post": "node ./scripts/create-blog-post.js",
+    "tophat": "gatsby clean && gatsby build && gatsby serve"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -31,6 +32,7 @@
     "@lezer/common": "^1.0.2",
     "@lezer/highlight": "^1.1.4",
     "@mdx-js/react": "^2.3.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@types/react-is": "^17.0.3",
     "@uiw/react-codemirror": "^4.19.11",
     "antlr4ts": "^0.5.0-alpha.4",
