--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.14",
+    "lodash.samplesize": "^4.2.0",
     "netlify-plugin-cache": "^1.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
