--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "autoprefixer": "^10.4.14",
     "lodash.samplesize": "^4.2.0",
     "netlify-plugin-cache": "^1.0.3",
+    "object-shape-validator": "^1.0.4",
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "slugify": "^1.6.6",
