🖥 Update vscode settings
This commit updates the vscode settings:

1. Markdown & mdx files no longer have autocomplete
2. There is a default tab size of 2 for new files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,23 @@
   "[mdx]": {
     "diffEditor.wordWrap": "on",
     "editor.wordWrap": "wordWrapColumn",
-    "editor.wordWrapColumn": 80
+    "editor.wordWrapColumn": 80,
+    "editor.quickSuggestions": {
+      "other": false,
+      "comments": false,
+      "strings": false
+    }
   },
   "[markdown]": {
     "diffEditor.wordWrap": "on",
     "editor.wordWrap": "wordWrapColumn",
-    "editor.wordWrapColumn": 80
-  }
+    "editor.wordWrapColumn": 80,
+    "editor.quickSuggestions": {
+      "other": false,
+      "comments": false,
+      "strings": false
+    }
+  },
+  "editor.tabSize": 2
 }
+
