--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "object-shape-validator": "^1.0.4",
     "postcss": "^8.4.21",
     "prettier": "^2.8.1",
+    "remark-gfm": "^3.0.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3"
