--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@babel/preset-env": "^7.21.4",
     "@codemirror/lang-javascript": "^6.1.7",
+    "@codemirror/lang-sql": "6.4.0",
     "@codemirror/language": "^6.6.0",
     "@codemirror/lint": "^6.2.1",
     "@codemirror/state": "^6.2.0",
