🔧 Save mermaid files to repo
Rather than needing to build the mermaid files every time the cache was
emptied, now the svgs are saved to the repo. This slightly clutters
things up, but the great thing is that now the svgs are easy to get to
and I don't need to have puppeteer run as part of the build process 🎉

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit",
     "pretty": "prettier --write \"**/*.{ts,tsx,js,css,scss}\"",
     "create-blog-post": "node ./scripts/create-blog-post.js",
+    "remove-mermaid-svgs": "node ./scripts/remove-mermaid-svgs.js",
     "tophat": "gatsby clean && gatsby build && gatsby serve"
   },
   "dependencies": {
