--- a/netlify.toml
+++ b/netlify.toml
@@ -14,4 +14,4 @@ package = "@netlify/plugin-gatsby"
 [[plugins]]
 package = "netlify-plugin-cache"
 [plugins.inputs]
-paths = [".cache", "public", ".cache-puppeteer"]
+paths = [".cache", "public"]
