--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceRoot}/node_modules/.bin/gatsby",
-      "args": ["develop"],
+      "args": ["develop", "--verbose"],
       "runtimeArgs": ["--inspect-brk"],
       "console": "integratedTerminal",
     },
