--- a/package.json
+++ b/package.json
@@ -93,5 +93,6 @@
     "slugify": "^1.6.6",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
